--- a/Interface_files/Add_new_task_Window.ui
+++ b/Interface_files/Add_new_task_Window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>359</width>
-    <height>431</height>
+    <height>503</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -29,8 +29,8 @@
    <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 227, 195, 255), stop:1 rgba(245, 78, 140, 255));
 </string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_5">
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <widget class="QFrame" name="frame">
      <property name="maximumSize">
       <size>
@@ -48,159 +48,56 @@ border-radius: 7px;</string>
      <property name="frameShadow">
       <enum>QFrame::Shadow::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
-      <item alignment="Qt::AlignmentFlag::AlignHCenter">
-       <widget class="QLabel" name="label">
-        <property name="font">
-         <font>
-          <pointsize>19</pointsize>
-          <bold>true</bold>
-         </font>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="4" column="0">
+       <widget class="QDateTimeEdit" name="dateTimeEdit">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">
-font-weight: bold;
-background-color: none;
-color: white;</string>
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+color: black;
+background-color: rgb(255, 255, 245, 100);</string>
         </property>
-        <property name="text">
-         <string>Добавление новой задачи</string>
+        <property name="dateTime">
+         <datetime>
+          <hour>0</hour>
+          <minute>0</minute>
+          <second>0</second>
+          <year>2024</year>
+          <month>1</month>
+          <day>1</day>
+         </datetime>
+        </property>
+        <property name="calendarPopup">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QLabel" name="label_2">
-          <property name="styleSheet">
-           <string notr="true">font: 12pt &quot;Sitka&quot;;
+      <item row="5" column="0" colspan="2">
+       <widget class="QLabel" name="label_4">
+        <property name="font">
+         <font>
+          <family>Sitka</family>
+          <pointsize>12</pointsize>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Sitka&quot;;
 color: black;
 background-color: none;</string>
-          </property>
-          <property name="text">
-           <string>Придумайте название задачи:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="lineEdit">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 13pt &quot;Sitka&quot;;
-color: black;
-background-color: rgb(255, 255, 245, 100);</string>
-          </property>
-          <property name="placeholderText">
-           <string>Введите название задачи</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+        </property>
+        <property name="text">
+         <string>Установите дату и время окончания</string>
+        </property>
+       </widget>
       </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QLabel" name="label_3">
-          <property name="font">
-           <font>
-            <family>Sitka</family>
-            <pointsize>12</pointsize>
-            <italic>false</italic>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 12pt &quot;Sitka&quot;;
-color: black;
-background-color: none;</string>
-          </property>
-          <property name="text">
-           <string>Установите дату и время начала</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QDateTimeEdit" name="dateTimeEdit">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 13pt &quot;Sitka&quot;;
-color: black;
-background-color: rgb(255, 255, 245, 100);</string>
-          </property>
-          <property name="dateTime">
-           <datetime>
-            <hour>0</hour>
-            <minute>0</minute>
-            <second>0</second>
-            <year>2024</year>
-            <month>1</month>
-            <day>1</day>
-           </datetime>
-          </property>
-          <property name="calendarPopup">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
-        <item>
-         <widget class="QLabel" name="label_4">
-          <property name="font">
-           <font>
-            <family>Sitka</family>
-            <pointsize>12</pointsize>
-            <italic>false</italic>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 12pt &quot;Sitka&quot;;
-color: black;
-background-color: none;</string>
-          </property>
-          <property name="text">
-           <string>Установите дату и время окончания</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QDateTimeEdit" name="dateTimeEdit_2">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">font: 13pt &quot;Sitka&quot;;
-color: black;
-background-color: rgb(255, 255, 245, 100);</string>
-          </property>
-          <property name="date">
-           <date>
-            <year>2024</year>
-            <month>1</month>
-            <day>2</day>
-           </date>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
+      <item row="9" column="1">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Orientation::Vertical</enum>
@@ -216,7 +113,59 @@ background-color: rgb(255, 255, 245, 100);</string>
         </property>
        </spacer>
       </item>
-      <item>
+      <item row="2" column="0">
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+color: black;
+background-color: rgb(255, 255, 245, 100);</string>
+        </property>
+        <property name="placeholderText">
+         <string>Введите название задачи</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QDateTimeEdit" name="dateTimeEdit_2">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+color: black;
+background-color: rgb(255, 255, 245, 100);</string>
+        </property>
+        <property name="date">
+         <date>
+          <year>2024</year>
+          <month>1</month>
+          <day>2</day>
+         </date>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Sitka&quot;;
+color: black;
+background-color: none;</string>
+        </property>
+        <property name="text">
+         <string>Придумайте название задачи:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0">
        <widget class="QPushButton" name="pushButton">
         <property name="minimumSize">
          <size>
@@ -242,6 +191,82 @@ background-color: rgb(255, 255, 245);
         </property>
         <property name="text">
          <string>Создать задачу</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>19</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font-weight: bold;
+background-color: none;
+color: white;</string>
+        </property>
+        <property name="text">
+         <string>Добавление новой задачи</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <family>Sitka</family>
+          <pointsize>12</pointsize>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Sitka&quot;;
+color: black;
+background-color: none;</string>
+        </property>
+        <property name="text">
+         <string>Установите дату и время начала</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QLabel" name="label_5">
+        <property name="font">
+         <font>
+          <family>Sitka</family>
+          <pointsize>12</pointsize>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Sitka&quot;;
+color: black;
+background-color: none;</string>
+        </property>
+        <property name="text">
+         <string>К какой категории относится задача?</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLineEdit" name="lineEdit_2">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 13pt &quot;Sitka&quot;;
+color: black;
+background-color: rgb(255, 255, 245, 100);</string>
+        </property>
+        <property name="placeholderText">
+         <string>Введите категорию задачи</string>
         </property>
        </widget>
       </item>
